--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		    game.load.image('bullet', 'lightning.png');
 		    game.load.image('enemyBullet', 'venom.png');
 		    game.load.image('invader', 'monster.png');
-		    game.load.image('player', 'ship.png');
+		    game.load.image('player', 'monster.png');
 		    game.load.spritesheet('kaboom', 'explode.png', 128, 128);
 		    game.load.image('num_0', 'zero.png');
 		    game.load.image('num_1', 'one.png', 32, 32);
